@@ -1,5 +1,13 @@
 2008-04-22  Marius Vollmer  <marius.vollmer@nokia.com>
 
+	* src/confutils.cc, src/confutils.h (notifier_equal): Removed.
+	* src/hildon-application-manager-config.cc (handle_generic_element):
+	Make element_description a parameter.
+	(handle_alist_element): New.
+	(handle_element): Use it for the notifier elements.
+	(main): Append the whole notifier configuration as one element.
+	(prepend): Removed, configuration lists are unsorted.
+
 	* src/update-notifier.c (struct _UpdateNotifierPrivate): Added
 	inotify_io_watch_id and child_watch_id.
 	(setup_inotify): Remember source id for the inotify channel watch.
